# lib-python-settings

./: CHANGELOG.md  pyproject.toml
src/pattern_agentic_settings/: __init__.py  base.py  hotreload.py
